[project]
name = ""
version = ""
description = ""
authors = [
    {name = "wholegale39", email = "295502313@163.com"},
]
dependencies = [
    "bottle>=0.12.23",
    "beaker>=1.11.0",
    "requests>=2.28.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
